[package]
name = "impart"
version = "0.1.0"
edition = "2021"
description = "Impart generates a world map partitioned into different elevation and climate zones"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.59"
clap = { version = "3.2.14", features = ["derive"] }
lazy_static = "1.4.0"
noise = "0.7.0"
palette = "0.6.1"
png = "0.17.5"
